[package]
name = "memmap_fs"
version = "0.1.0"
edition = "2021"
description = "A database-less, zero-daemon, local-first memory and state synchronization file system for AI Agents"
license = "MIT"

[lib]
name = "memmap_fs"
path = "src/lib.rs"

[[bin]]
name = "memmap_fs"
path = "src/main.rs"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
tantivy = "0.22"

[dev-dependencies]
tempfile = "3"
